# RustOneFileExample

./: Cargo.toml  README.md
