[package]
name = "rust_one_file_example"
version = "0.1.0"
authors = ["yangzhang214024 <yangzhang214024@sohu-inc.com>"]
edition = "2018"

[dependencies]
regex="*"
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.6.0"
reqwest = { version = "0.10", features = ["blocking","json"] }
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"
rand="*"